# shotcove

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  TERMS.md  package-lock.json  package.json  postcss.config.js  vite.config.js
.cargo/: config.toml
.github/workflows/: build-artifacts.yml  deploy-docs.yml  release.yml
pages/: editor.html  gallery.html  index.html  overlay.html  transfers.html
scripts/: build-legal.mjs
src/: styles.css
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: tray-locale.json
src-tauri/src/: capture.rs  capture_macos.rs  clipboard_file.rs  config.rs  direct_link.rs  icon_cache.rs  lib.rs  library.rs  main.rs  meta.rs  overlay.rs  store_screenshots.rs  sync.rs  tag.rs  translate.rs  tray.rs  win_util.rs
src-tauri/src/commands/: app.rs  editor.rs  mod.rs  overlay_cmd.rs  update.rs
src-tauri/src/drive/: api.rs  auth.rs  mod.rs
src/components/: DirectLinkEditor.jsx  LegalDocModal.jsx  ShortcutEditor.jsx  TitleBar.jsx  UpdateAvailableModal.jsx  WhatsNewModal.jsx  settingsUI.jsx
src/editor/: App.jsx  canvas-editor.js  icons.jsx  main.jsx
src/gallery/: App.jsx  icons.jsx
src/lib/: i18n.js  legal.js  links.js  platform.js  tauri.js  translate.js  version.js
src/locales/: en.js  tr.js
src/onboarding/: LegalUpdateModal.jsx  Onboarding.jsx
src/overlay/: main.js  overlay.css
src/settings/: App.jsx  main.jsx
src/transfers/: App.jsx  main.jsx
website/: .gitignore  README.md  index.html  license.html  package-lock.json  package.json  privacy.html  terms.html  vite.config.js
website/public/: robots.txt  sitemap.xml
website/scripts/: build-legal.mjs  build-site.mjs  fetch-releases.mjs  site-url-plugin.mjs
website/src/: App.jsx  license-main.jsx  main.jsx  privacy-main.jsx  styles.css  terms-main.jsx  tr-main.jsx
website/src/components/: Changelog.jsx  Download.jsx  Features.jsx  Footer.jsx  Header.jsx  Hero.jsx  LanguageSwitcher.jsx  LegalPage.jsx  Screenshot.jsx  ScreenshotPlaceholder.jsx  Screenshots.jsx  ScrollToTop.jsx  Shortcuts.jsx
website/src/lib/: LanguageContext.jsx  i18n.js  languages.js  platform.js  routes.js
website/src/locales/: en.js  tr.js
website/src/pages/: LicensePage.jsx  PrivacyPage.jsx  TermsPage.jsx
website/tr/: index.html
