[package]
name = "shotcove"
version = "1.0.2"
description = "Screenshot tool with Google Drive sync"
authors = ["Alperen Cetin <me@xacnio.dev>"]
license = "MIT"
repository = "https://github.com/xacnio/shotcove"
edition = "2021"

[lib]
name = "shotcove_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "cookies", "stream"] }
xcap = "0.4"
image = { version = "0.25", features = ["avif"] }
chrono = "0.4"
notify = "8"
notify-debouncer-full = "0.5"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
futures = "0.3"
bytes = "1"
http-body-util = "0.1"
http-body = "1"
filetime = "0.2"
log = "0.4"
env_logger = "0.11"
url = "2"
unicode-normalization = "0.1"
zeroize = { version = "1", features = ["derive"] }
regex = "1"
trash = "5.2.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi", "Win32_System_Threading", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi", "Win32_Storage_Xps", "Win32_Storage_FileSystem", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_Storage_EnhancedStorage", "Win32_System_Variant", "Win32_Graphics_Imaging", "Win32_Security", "Win32_Security_Credentials"] }

[target."cfg(not(windows))".dependencies]
mouse_position = "0.1.4"
# Real OS-backed credential storage for the Drive token store (macOS Keychain,
# Linux Secret Service via zbus). Windows keeps its own CredWriteW-based path
# in drive/mod.rs.
keyring = "4"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSPasteboard", "NSWindow"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSURL"] }
# CGWindowListCreateImage (xcap's macOS capture backend) silently returns blank
# images on newer macOS releases; ScreenCaptureKit is the only API Apple still
# guarantees pixel data from.
# Pinned below 8.0.0: that release duplicates apple-cf's CoreMediaBridge Swift
# symbols (AudioBufferBridge etc.), causing a "duplicate symbol" link error.
screencapturekit = { version = "=7.0.1", features = ["macos_14_0"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Fast personal build: no LTO, parallel codegen, still optimized
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 3
